--- a/libraries/core/pubspec.yaml
+++ b/libraries/core/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   json_annotation: ^4.8.1
   json_serializable: ^6.7.1
   shared_preferences: ^2.2.2
+  dio_smart_retry: ^6.0.0
+  pretty_dio_logger: ^1.3.1
+  logger: ^2.0.2+1
 
 dev_dependencies:
   flutter_test:
